consolidated css rules to remove redundacies

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon | Online Marketing Solutions</title>
 </head>
 
 <body>
-    <header class="header">
+    <header class="header"> <!--changed div to header tag-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <nav> <!--changed div to nav tag-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,10 +25,10 @@
         </nav>
     </header>
 
-    <figure class="hero" title="Digital Marketing Meeting"></figure>
+    <figure class="hero" title="Digital Marketing Meeting"></figure> <!--changed div to figure tag-->
     
-    <main class="content">
-        <section class="search-engine-optimization">
+    <main class="content"> <!--changed div to main tag-->
+        <section class="search-engine-optimization"> <!--changed div to section tags-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -51,7 +51,7 @@
         </section>
     </main>
 
-    <aside class="benefits">
+    <aside class="benefits"> <!--changed div to aside tag-->
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="" />
@@ -74,8 +74,8 @@
             </p>
         </div>
     </aside>
-    
-    <footer class="footer">
+
+    <footer class="footer"> <!--changed div to footer tag-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
